fix truncate issue on details panel

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -61,6 +61,7 @@ body {
   line-height: 150%;
   font-family: "Roboto", sans-serif;
   font-size: 13px;
+  margin: 0;
 }
 
 p {
@@ -335,6 +336,7 @@ h2 {
     bottom: 0;
     padding: 0 36px 0 36px;
     overflow-y: scroll;
+    width: 100%;
 
     &-info {
       margin-top: 16px;
